# kaggle

./: README.md  pyproject.toml
mushrooms-playground/: train.py
used-cars-prices/: train.py
