[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["Pasqg <pasquale.giovenale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
